# LidarTerrainMesh

./: .gitignore  CMakeLists.txt  README.md  cmake.sh  make.sh  swiss_lidar.py  swiss_region.py  swisssurface3d.csv  test.sh  ycm_extra_conf.py
include/: aabb.h  arc_raster.h  array.h  chrono.h  copc.h  fast_parse.h  geometry.h  hash.h  hash_table.h  kd_tree.h  las_normal.h  las_point_cloud.h  las_read.h  las_source.h  las_tree.h  math_utils.h  mesh.h  mesh_adjacency.h  mesh_grid.h  mesh_inria.h  mesh_mgrid.h  mesh_obj.h  mesh_ply.h  mesh_remesh.h  mesh_utils.h  multigrid.h  plane_fitting.h  quat.h  simplifier_mod.h  swiss_mgrid.h  swiss_raster.h  sys_utils.h  txt_io_fast.h  types.h  vec2.h  vec3.h  vec4.h  vertex_remap.h  vertex_table.h
src/: CMakeLists.txt  arc_raster.c  chrono.cpp  compute_normals.cpp  copc.cpp  french_lidar.cpp  las_files.cpp  las_normal.cpp  las_point_cloud.c  las_point_cloud.cpp  las_quality.cpp  las_read.cpp  las_source.cpp  mesh.cpp  mesh_adjacency.cpp  mesh_grid.cpp  mesh_inria.cpp  mesh_mgrid.cpp  mesh_mgrid_old.cpp  mesh_obj.cpp  mesh_ply.cpp  mesh_remesh.cpp  mesh_utils.cpp  ply_to_translated_obj.cpp  simplifier_mod.cpp  swiss_build_one.cpp  swiss_lidar.cpp  swiss_mgrid.cpp  swiss_raster.cpp  swiss_stitch.cpp  test.c  txt_io_fast.c  vertex_remap.cpp
test/: build_translated_obj.py  french_lidar.py  swiss_lidar.py
